1. Make Grid support ajax search on toolbar 2. Fix a bug (fixed in entity-grid.js), bug reproduce steps: 	1) full size the browser 	2) visit a page having grid with many lines (http://localhost:8083/person?name=admin) 	3) filter by parameter, let the grid content less than the screen lines 	4) inside of the gridcontainer, above the table, there will be a blank area    Reason: when there is no enough data, the scrollable js will align its bottom 3. Fix a bug: when entityFilter(type=string) has value attached, should have del-icon visible. fixed in entity.js

--- a/admin-site/src/main/resources/webcontent/admin_style/template/css/entity/entity-grid.css
+++ b/admin-site/src/main/resources/webcontent/admin_style/template/css/entity/entity-grid.css
@@ -1,7 +1,96 @@
 div.entity-grid-container{
 
 }
+/* toolbar */
+div.entity-grid-container
+.toolbar {
+    margin: 0;
+    padding: 5px;
+    background: #f1f1f1;
+    background: -moz-linear-gradient(top, #f1f1f1 0%, #e2e2e2 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f1f1f1), color-stop(100%,#e2e2e2));
+    background: -webkit-linear-gradient(top, #f1f1f1 0%,#e2e2e2 100%);
+    background: -o-linear-gradient(top, #f1f1f1 0%,#e2e2e2 100%);
+    background: -ms-linear-gradient(top, #f1f1f1 0%,#e2e2e2 100%);
+    background: linear-gradient(to bottom, #f1f1f1 0%,#e2e2e2 100%);
+    border-top: 1px solid #ddd;
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    min-height: 23px;
+}
+div.entity-grid-container
+.toolbar .search-group{
+    padding-left: 2px;
+}
 
+div.entity-grid-container
+.toolbar .search-btn{
+    float: right;
+    padding-bottom: 1px;
+    padding-top: 1px;
+    background-color: #F5F2F2;
+    border-color: #cccccc;
+    border-bottom-left-radius: 0;
+    border-top-left-radius: 0;
+    margin-left: 0;
+    color: #B9B9B9;
+}
+
+div.entity-grid-container
+.toolbar .search-text{
+    position: relative;
+    display: block;
+    overflow: hidden;
+}
+div.entity-grid-container
+.toolbar .search-input-element{
+    position: relative;
+    display: inline-block;
+    width: 100%;
+}
+
+div.entity-grid-container
+ .toolbar .search-input-element .fa{
+    position: absolute;
+    color: #aaaaaa;
+    top: 5px;
+    z-index: 2;
+    vertical-align: middle;
+}
+
+div.entity-grid-container
+.toolbar .search-input{
+    width: 100%;
+    border-radius: 5px;
+    border: 1px solid #cccccc;
+    border-right: 0;
+    border-bottom-right-radius: 0;
+    border-top-right-radius: 0;
+    color: #353a3b;
+    padding-left: 20px;
+    padding-right: 20px;
+    font-weight: normal;
+}
+
+div.entity-grid-container
+.toolbar .search-input:focus{
+    border-color: #a0bf30;
+    outline: 0;
+    -webkit-box-shadow: inset 0 2px 2px rgba(0,0,0,.075), 0 0 8px rgba(198, 230, 59, 0.6);
+    box-shadow: inset 0 2px 2px rgba(0,0,0,.075), 0 0 8px rgba(185, 221, 56, 0.68);
+}
+
+div.entity-grid-container
+.toolbar .embed-hint{
+    left: 5px;
+}
+
+div.entity-grid-container
+.toolbar .embed-delete{
+    right: 8px;
+}
 /*  Header Wrapper  */
 
 div.entity-grid-container
@@ -9,8 +98,8 @@ div.entity-grid-container
     position: relative;
     z-index: 4; /*higer than footer, avoid dropdown hidden*/
     background: #F5F5F5;
-    border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
+    /*border-top-left-radius: 4px;*/
+    /*border-top-right-radius: 4px;*/
     border: 1px solid #DDD;
 }
 div.entity-grid-container
@@ -122,6 +211,9 @@ div.entity-grid-container tbody tr:hover{
     background-color: #F5F5F4;
 }
 
+div.entity-grid-container tbody tr.selected{
+    background-color: #D6D6D4;
+}
 /*  Footer Wrapper  */
 div.entity-grid-container
 .footer{
